# avon

./: .gitignore  AOC_BUILTINS_ROADMAP.md  ARCHITECTURE.md  AVON_GOTCHAS_REPORT.md  Avon.av  Avonfile.av  BUILTINS.md  BUILTIN_IMPROVEMENTS.md  CHANGE_REPORT.md  Cargo.toml  IMPROVEMENTS.md  LANGUAGE_IMPROVEMENT_PROPOSALS.md  MODULARIZATION_GUIDE.md  PHASE1_COMPLETION.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION.md  PHASE2_SUMMARY.txt  README.md  SESSION_SUMMARY.md  TASKRUNNER_EXAMPLES.md  TASKRUNNER_QUICKSTART.md  TEST_AV_COMPLETE_REPORT.md  TEST_AV_FIX_REPORT.md  TEST_AV_QUICK_FIX.md  TIER1_IMPLEMENTATION_COMPLETE.md  TUTORIAL_CONSOLIDATION_SUMMARY.md  count_rotations.av  default.nix  nvim.av  shell.nix  test.av  test_absolute.av  test_crossings.av  test_debug.av  test_debug_aoc.av  test_div.av  test_example.av  test_land_and_pass.av  test_modulo.av  test_operators.av  (+6 more)
avon-lsp/: Cargo.toml  README.md
avon-lsp/src/: main.rs
benchmarks/: filter_parallel.av  filter_sequential.av  fold_parallel.av  fold_sequential.av  map_parallel.av  map_sequential.av  run_benchmarks.sh  test_parallel.sh
examples/: REPL_USAGE.md  SIMPLE_CONFIGS.md  SITE_GENERATOR.md  SITE_GENERATOR_MINIMAL.md  SITE_GENERATOR_POC.md  aggregate_demo.av  aoc2024_day12_paper_rolls.av  args_test.av  assert_demo.av  backup_config_with_timestamp.av  backup_demo.av  builtin_currying.av  bulletproof_slimmed.av  c_preprocessor.av  casting_demo.av  ci_pipeline.av  complex_template.av  complex_usage_1.av  complex_usage_2.av  complex_usage_3.av  complex_usage_4.av  complex_usage_5.av  comprehensive.av  conditionals_template.av  contains_starts_ends.av  cpp_min.av  cpp_tiny.av  cross_format_conversion.av  curly_test_1_simple_json.av  curly_test_2_nested_json.av  curly_test_3_mixed.av  curly_test_4_array.av  curly_test_5_code.av  data_conversion_demo.av  date_time_demo.av  debugging_techniques.av  default_builtin_before_after.av  default_demo.av  deploy_list.av  dict_cache_lookup.av  (+137 more)
scripts/: README.md  run_examples.sh  test_all.sh  test_all_examples.sh  test_atomic_deployment.sh  test_bulletproof.sh  test_claims.sh  test_example_outputs.sh  test_grammar.sh  test_integration.sh  test_path_traversal.sh  test_repl.sh  test_scoping_rules.sh  test_security_comprehensive.sh  test_template_syntax.sh  test_tutorial_snippets.sh
src/: cli.rs  common.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  syntax.rs
testing/: README.md  common.sh  run-all.sh  run-cargo-tests.sh
tests/: bulletproof.av  bulletproof_slimmed.av  comprehensive.av  grammar_comprehensive.av  integration_tests.rs  security_tests.av
vscode/: LICENSE  (+8 more)
(+144 files in other folders)
