[package]
name = "avon"
version = "0.1.0"
edition = "2021"
authors = ["Avon Contributors"]
description = "A modern template language for generating code, configs, and infrastructure"
license = "MIT"
repository = "https://github.com/pyrotek45/avon"
readme = "README.md"
keywords = ["template", "code-generation", "templating", "infrastructure"]
categories = ["development-tools"]

[lib]
name = "avon"
path = "src/lib.rs"

[[bin]]
name = "avon"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
ureq = "3.1"
rustyline = "17.0"
chrono = "0.4"
regex = "1.12.2"
itertools = "0.14.0"
serde_yaml = "0.9.34"
toml = "0.9.8"
glob = "0.3.3"
pathdiff = "0.2.3"
csv = "1.4.0"
pulldown-cmark = "0.12"
