[package]
name = "avon"
version = "0.1.0"
edition = "2021"
authors = ["Avon Contributors"]
description = "A modern template language for generating code, configs, and infrastructure"
license = "MIT"
repository = "https://github.com/pyrotek45/avon"
readme = "README.md"
keywords = ["template", "code-generation", "templating", "infrastructure"]
categories = ["development-tools"]

[lib]
name = "avon"
path = "src/lib.rs"

[[bin]]
name = "avon"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
ureq = "3.1"
rustyline = "17.0"
chrono = "0.4"
regex = "1.12.2"
itertools = "0.14.0"
serde_yaml = "0.9.34"
toml = "0.9.8"
glob = "0.3.3"
pathdiff = "0.2.3"
csv = "1.4.0"
pulldown-cmark = "0.12"
roxmltree = "0.20"
rust-ini = "0.21"
scraper = "0.22"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
rand = "0.8"
rayon = "1.10"
