[package]
name = "avon-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Avon Contributors"]
description = "Language Server Protocol (LSP) implementation for Avon"
license = "MIT"
repository = "https://github.com/pyrotek45/avon"

[[bin]]
name = "avon-lsp"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
avon = { path = "../" }
